tests/transpiler/x/zig/in_operator_extended.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/in_operator_extended.zig:13:9: error: local variable is never mutated
    var tmp = arr.toOwnedSlice() catch unreachable;
        ^~~
/workspace/mochi/tests/transpiler/x/zig/in_operator_extended.zig:13:9: note: consider using 'const'
/workspace/mochi/tests/transpiler/x/zig/in_operator_extended.zig:9:13: error: remainder division with 'i64' and 'comptime_int': signed integers and floats must use @rem or @mod
        if (x % 2 == 1) {
            ^
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
